Fix gap and height on the cards in .article

--- a/style.css
+++ b/style.css
@@ -398,7 +398,7 @@ body {
 }
 
 .container {
-    height: 100vh;
+    min-height: 100vh;
     display: grid;
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 4fr;
@@ -588,7 +588,7 @@ button.avatar-2 {
 .article .wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-    gap: 30px;
+    gap: 40px;
     margin-top: 16px;
 }
 
@@ -598,7 +598,7 @@ button.avatar-2 {
 
 .article .card {
     background-color: #FFFFFF;
-    height: 220px;
+    height: 230px;
     padding: 30px;
     border-radius: 10px;
     border-left: 10px solid orange;
@@ -619,7 +619,7 @@ button.avatar-2 {
 }
 
 .card .icons {
-    justify-self: end;
+    place-self: end;
     display: grid;
     grid-template-columns: repeat(3, auto);
     gap: 20px;
